--- a/hello-spring/src/main/resources/templates/hello.html
+++ b/hello-spring/src/main/resources/templates/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    Hello
-    <a href = '#'>hello</a>
+<p th:text="'안녕하세요.' + ${data}" > 안녕하세요. 손님</p>
+<a href = '#'>hello</a>
 </body>
 </html>
